agrego estilos y arreglo algunos parametros

--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
             <section class="col-xxl-12 col-xl-12 col-lg-12 col-md-12 col-sm-12 textheight">
               <div>
                 <div class="imageabsolut">
-                  <img src="./assets/image/Topographic.webp" alt="lo sentimos no carga la imagen">
+                   <img src="./assets/image/Topographic.webp" alt="lo sentimos no carga la imagen">
                 </div class="container-center">
-                <h1 class="textheight">Explora los Andes Colombianos<img class="imagesmall" src="./assets/image/nieve mntaña.webp" alt="Montañas cubiertas de nieve">Aventura única<img class="imagesmall" src="./assets/image/condor.webp" alt="Pájaro exótico volando">Fauna brillante en el cielo<img class="imagesmall" src="./assets/image/cascada.webp" alt="Cascada impresionante"></h1>
+                   <h1>Explora los Andes Colombianos Aventura única exuberantes paisajes brillantes en el cielo</h1>
+                   <img src="./assets/image/nieve mntaña.webp" alt="Montañas cubiertas de nieve">
               </div>
                 <!--contenido de mi pagina-->
             </section>
