--- a/pages/contact.html
+++ b/pages/contact.html
@@ -26,7 +26,7 @@
         <section class="row h-100">
             <nav class="navbar navbar-expand-lg navbar-light p-3 text-primary-emphasis bg-danger border border-primary-subtle">
                 <a class="navbar-brand" href="../index.html">
-                  <img src="../assets/image/Logo.webp" alt="logo" style="width: 80px; height: auto;">
+                  <img src="../assets/image/Lgo.svg" alt="logo" style="width: 150px; height: auto;">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
