agrego estilos y finzalizo el diseno

--- a/pages/about.html
+++ b/pages/about.html
@@ -59,7 +59,7 @@
                 <div class="imageabsolut">
                   <img src="../assets/image/Topographic.webp" alt="Topographic">
                 </div>
-                <h1 class="blanco">Acerca de los Andes Colombianos</h1>
+                <h1 class="blanco blancoedit">Acerca de los Andes Colombianos</h1>
                 <p>Los Andes colombianos se extienden a lo largo del territorio de Colombia, desde el suroccidente hasta el norte del país. Esta imponente cadena montañosa abarca una diversidad de paisajes y altitudes que van desde valles fértiles hasta picos nevados.
 
                     Con una extensión de más de 1,500 kilómetros, los Andes colombianos ofrecen una variedad de ecosistemas que albergan una biodiversidad excepcional. Encontrarás bosques tropicales húmedos en las regiones más bajas, mientras que en las zonas de mayor altitud podrás explorar páramos, lagunas glaciares y espectaculares formaciones rocosas.
