--- a/pages/us.html
+++ b/pages/us.html
@@ -56,6 +56,9 @@
     <main>
         <section>
             <div class="container">
+              <div>
+                <h1 class="blanco blancoedit">Sobre nosotros</h1>
+              </div>
                 <h2 class="blanco">Introducción:</h2>
                 <p>
                  Como investigador apasionado por la biodiversidad y los ecosistemas montañosos, he centrado mi atención en los Andes Colombianos, una región reconocida por su naturaleza exuberante y su riqueza biológica. En este estudio, me embarco en un viaje de descubrimiento para explorar la diversidad de esta fascinante región y comprender su importancia en el contexto de la conservación y el ecoturismo.
