--- a/pages/contact.html
+++ b/pages/contact.html
@@ -57,6 +57,9 @@
     
     <!--grid + Flexbox-->
     <main class="main-contact">
+        <div>
+          <h1 class="blanco blancoedit">Contacto</h1>
+        </div>
         <div class="grid">
             <div class="item">
               <div>
