--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <div>
                 <div class="imageabsolut">
                    <img src="./assets/image/Topographic.webp" alt="lo sentimos no carga la imagen">
-                </div class="container-center">
+                </div>
                    <h1 class="blanco blancoedit">Explora los Andes Colombianos Aventura única exuberantes paisajes brillantes en el cielo</h1>
               </div>
                 <!--contenido de mi pagina-->
