--- a/pages/contact.html
+++ b/pages/contact.html
@@ -57,6 +57,9 @@
     
     <!--grid + Flexbox-->
     <main class="main-contact">
+        <div class="imageabsolut">
+           <img src="../assets/image/Topographic.webp" alt="lo sentimos no carga la imagen">
+        </div>
         <div>
           <h1 class="blanco blancoedit">Contacto</h1>
         </div>
