--- a/pages/us.html
+++ b/pages/us.html
@@ -54,6 +54,9 @@
 
     <!--Flexbox-->
     <main>
+        <div class="imageabsolut">
+          <img src="../assets/image/Topographic2.webp" alt="lo sentimos no carga la imagen">
+        </div>
         <section>
             <div class="container">
               <div>
