--- a/pages/services.html
+++ b/pages/services.html
@@ -61,7 +61,7 @@
             <div>
               <div class="imageabsolut">
                  <img src="../assets/image/Topographic2.webp" alt="lo sentimos no carga la imagen">
-              </div class="container-center">
+              </div>
                  <h1 class="blanco blancoedit">Nuestros Servicios</h1>
             </div>
              <!--contenido de mi pagina-->
