--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="imageabsolut">
                    <img src="./assets/image/Topographic.webp" alt="lo sentimos no carga la imagen">
                 </div>
-                   <h1 class="blanco blancoedit">Explora los Andes Colombianos Aventura única exuberantes paisajes brillantes en el cielo</h1>
+                   <h1 class="blanco blancoedit">Explora los Andes Colombianos </h1>
               </div>
                 <!--contenido de mi pagina-->
             </section>
