--- a/index.html
+++ b/index.html
@@ -52,21 +52,21 @@
             </div>
         </nav>
     </section>
+    </div>
+      <h1 class="blanco blancoedit">Explora los Andes Colombianos </h1>
+    </div>
 </header>
 
     
 <!--Bootstrap + Flexbox + Grid  -->
     <main class="container-fluid">
         <div class="row h-100">
-            <section class="col-xxl-12 col-xl-12 col-lg-12 col-md-12 col-sm-12 textheight">
-              <div>
-                <div class="imageabsolut">
-                   <img src="./assets/image/Topographic.webp" alt="lo sentimos no carga la imagen">
-                </div>
-                   <h1 class="blanco blancoedit">Explora los Andes Colombianos </h1>
+            <section>
+              <div class="imageabsolut">
+                <img src="./assets/image/Topographic.webp" alt="lo sentimos no carga la imagen">
               </div>
-                <!--contenido de mi pagina-->
             </section>
+            <!--contenido de mi pagina-->
             <div class="container mt-5">
               <button class="btn btn-primary animate-button">Presiona Aquí</button>
             </div>
