--- a/pages/services.html
+++ b/pages/services.html
@@ -52,17 +52,19 @@
                 </div>
             </nav>
         </section>
+        <div>
+          <h1 class="blanco blancoedit">Nuestros Servicios</h1>
+        </div>
     </header>
 
     <!--Flexbox-->
    <main class="container-fluid">
       <div class="row h-100">
-          <section class="col-xxl-12 col-xl-12 col-lg-12 col-md-12 col-sm-12 textheight">
+          <section>
             <div>
               <div class="imageabsolut">
                  <img src="../assets/image/Topographic2.webp" alt="lo sentimos no carga la imagen">
               </div>
-                 <h1 class="blanco blancoedit">Nuestros Servicios</h1>
             </div>
              <!--contenido de mi pagina-->
             </section>
